Add Presentations Model View controller
updated application routes

Added presentations controller

Added presentation model

Added presentation views
  - errors
  - form
  - edit
  - index
  - new
  - show

updated application site-navigation to show presentations link

--- a/app/views/layouts/_site-nav.html.erb
+++ b/app/views/layouts/_site-nav.html.erb
@@ -3,5 +3,5 @@
       Staff Tracker
     <% end %>
     <%= link_to 'People', people_path %>
-    <%= link_to 'Staff', staff_index_path %>
+    <%= link_to 'Presentations', presentations_path %>
 </header>
