Fix New Presentation Form
This fixes the presenter select list to pull from the People, instead of
the events.

It also exchanges the duration label to be minutes, which we are not
currently enforcing a time unit type.

--- a/app/views/presentations/_form.html.erb
+++ b/app/views/presentations/_form.html.erb
@@ -13,7 +13,7 @@
 
   <p>
     <%= f.label :duration %><br>
-    <%= f.text_field :duration %> Seconds
+    <%= f.text_field :duration %> Minutes
   </p>
 
   <p>
@@ -23,7 +23,7 @@
 
   <p>
     <%= f.label :presenter %><br>
-    <%= collection_select(:presentation, :person_id, Event.all, :id, :name, include_blank: true) %>
+    <%= collection_select(:presentation, :person_id, Person.all, :id, :first_name, include_blank: true) %>
     or
     <%= f.text_field :presenter, placeholder: 'Enter guest name' %>
   </p>
