--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -3,5 +3,6 @@
   <td>
     <%= link_to 'Show', event_path(event) %>
     <%= link_to 'Edit', edit_event_path(event) %>
+    <%= render partial: 'delete-link', locals: { event: event } %>
   </td>
 </tr>
