--- a/app/views/presentations/_form.html.erb
+++ b/app/views/presentations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @presentation do |f| %>
+<%= form_for presentation do |f| %>
   <%= render 'errors' %>
 
   <p>
@@ -20,6 +20,14 @@
     <%= f.label :event %><br>
     <%= f.collection_select(:event_id, Event.upcoming, :id, :name, prompt: true) %>
   </p>
+  <% if current_person && current_person.admin? %>
+    <p>
+      <%= f.label :presenter %><br>
+      <%= collection_select(:presentation, :person_id, Person.all, :id, :first_name, include_blank: true) %>
+      or
+      <%= f.text_field :presenter, placeholder: 'Enter guest name' %>
+    </p>
+  <% end %>
 
   <p>
     <%= f.submit %>
