Add Edit/Delete links to presentations #show
Update render form to pass presentation as a local variable to the
partial view.

--- a/app/views/presentations/show.html.erb
+++ b/app/views/presentations/show.html.erb
@@ -10,3 +10,9 @@
   <dt>Date</dt>
   <dd><%= @presentation.event.date %></dd>
 </dl>
+
+<%= link_to 'Edit', edit_presentation_path(@presentation) %>
+<%= link_to 'Delete', presentation_path(@presentation),
+  method: :delete,
+  data: { confirm: 'Are you sure?' } %>
+
