--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,14 +3,12 @@
   <div class='header-links'>
     <ul>
       <li><%= link_to 'Upcoming Events', upcoming_events_path %></li>
-      <li><%= link_to 'New Presentation', new_presentation_path %></li>
-      <li>
-        <% if current_person %>
-          <%= link_to 'Sign Out', signout_path %>
-        <% else %>
-          <%= link_to 'Sign In', '/auth/google_oauth2' %>
-        <% end %>
-      </li>
+      <% if current_person %>
+        <li><%= link_to 'New Presentation', new_presentation_path %></li>
+        <li><%= link_to 'Sign Out', signout_path %></li>
+      <% else %>
+        <li><%= link_to 'Sign In', '/auth/google_oauth2' %></li>
+      <% end %>
     </ul>
   </div>
 </header>
