Update next-event view
Conditionally render text with links to create new presentation.

Remove link to create event since only admins currently have permissions
to create events.

--- a/app/views/welcome/_next-event.html.erb
+++ b/app/views/welcome/_next-event.html.erb
@@ -18,16 +18,12 @@
     <% else %>
       <p>
         There are currently no presentations for this event.
-        <%= link_to 'Sign up', new_presentation_path %>
+        <%= render 'shared/new_presentation_link' %>
         to teach some people something!
       </p>
     <% end %>
 
   <% else %>
-    <p>
-      There are no upcoming events.
-      <%= link_to 'Create one', new_event_path %>
-      to get the party started.
-    <p>
+    <p>There are no upcoming events.</p>
   <% end %>
 </div>
