Update events form

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,23 +1,8 @@
-<%= form_for @event do |f| %>
-  <%= render 'errors' %>
+<%= simple_form_for @event do |f| %>
 
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
-
-  <p>
-    <%= f.label :location %><br>
-    <%= f.text_field :location %>
-  </p>
-
-  <p>
-    <%= f.label :date %><br>
-    <%= f.date_field :date %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
+  <%= f.input :name %>
+  <%= f.input :location %>
+  <%= f.input :date %>
+  <%= f.button :submit %>
 
 <% end %>
