--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,43 +1,12 @@
-<%= form_for @person do |f| %>
-  <%= render 'errors' %>
+<%= simple_form_for @person do |f| %>
 
-  <p>
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %>
-  </p>
-
-  <p>
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
-  </p>
-
-  <p>
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </p>
-
-  <p>
-    <%= f.label :password %><br>
-    <%= f.password_field :password %>
-  </p>
-
-  <p>
-    <%= f.label :password_confirmation %><br>
-    <%= f.password_field :password_confirmation %>
-  </p>
-
-  <p>
-    <%= f.label :date_of_birth %><br>
-    <%= f.date_field :date_of_birth %>
-  </p>
-
-  <p>
-    <%= f.label :gender %><br>
-    <%= f.text_field :gender %>
-  <p>
-
-  <p>
-    <%= f.submit %>
-  </p>
+  <%= f.input :first_name %>
+  <%= f.input :last_name %>
+  <%= f.input :email %>
+  <%= f.input :password %>
+  <%= f.input :password_confirmation %>
+  <%= f.input :date_of_birth %>
+  <%= f.input :gender %>
+  <%= f.button :submit %>
 
 <% end %>
