Add flash message partial to layout views
Render flash-message from application layout.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <%= flash[:notice] %>
+    <%= render 'layouts/flash-messages' %>
     <%= yield %>
   </body>
 </html>
