--- a/app/views/presentations/new.html.erb
+++ b/app/views/presentations/new.html.erb
@@ -1,3 +1,3 @@
 <h1>New Presentation</h1>
 
-<%= render 'form', presentation: @presentation  %>
+<%= render 'form', presentation: @presentation, prepopulated_event: @prepopulated_event %>
