--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -4,5 +4,6 @@
     <%= link_to 'Show', event_path(event) %>
     <%= link_to 'Edit', edit_event_path(event) %>
     <%= render partial: 'delete-link', locals: { event: event } %>
+    <%= render 'presentations/sign_up_link', event: event %>
   </td>
 </tr>
