--- a/app/views/presentations/show.html.erb
+++ b/app/views/presentations/show.html.erb
@@ -11,7 +11,7 @@
   <dd><%= @presentation.event.date %></dd>
 </dl>
 
-<%= link_to 'Edit', edit_presentation_path(@presentation) %>
+<%= link_to 'Edit', edit_event_presentation_path(@presentation.event, @presentation) %>
 <%= link_to 'Delete', presentation_path(@presentation),
   method: :delete,
   data: { confirm: 'Are you sure?' } %>
