Update presentations form
In the case that the presentations associated event is
available, populate the dropdown with that value. Otherwise
prompt.

--- a/app/views/presentations/_form.html.erb
+++ b/app/views/presentations/_form.html.erb
@@ -4,7 +4,12 @@
   <%= f.input :topic %>
   <%= f.input :description, as: :string %>
   <%= f.input :duration, as: :numeric %>
-  <%= f.association :event, collection: upcoming_events, label_method: :display_name %>
+  <%= f.association :event,
+    collection: upcoming_events,
+    prompt: true,
+    selected: @event.id,
+    label_method: :display_name
+  %>
   <% if current_person && current_person.admin? %>
     <%= f.label :presenter %>
     <%= f.association :person, label_method: :first_name %>
