Implement auto populate on welcome index
altered the next presentation partial link to
accept an optional event to assign to.

--- a/app/views/shared/_new_presentation_link.html.erb
+++ b/app/views/shared/_new_presentation_link.html.erb
@@ -1,5 +1,10 @@
-<% if current_person %>
-  <%= link_to 'Sign up', new_presentation_path %>
-<% else %>
-  <%= link_to 'Sign in', '/auth/google_oauth2' %>
-<% end %>
+<%=
+  case
+  when current_person.nil?
+    link_to 'Sign In', '/auth/google_oauth2'
+  when event
+    link_to 'Sign Up', new_event_presentation_path(event)
+  else
+    link_to 'Sign Up', new_presentation_path
+  end
+%>
