Add new migration
Changed the description columns data type
from binary to string to better reflect what
sort of data is going to be stored.

--- a/app/views/presentations/_form.html.erb
+++ b/app/views/presentations/_form.html.erb
@@ -7,7 +7,7 @@
 <%= simple_form_for presentation do |f| %>
 
   <%= f.input :topic %>
-  <%= f.input :description, as: :string %>
+  <%= f.input :description %>
   <%= f.input :duration, as: :numeric %>
   <%= f.association :event,
     collection: associable_events,
